# boreas

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
boreas/: __init__.py  cli.py  config.py  db.py  scheduler.py
boreas/agents/: analyst.py  executor.py  graph.py  llm.py  playbook.py  reflector.py  risk_officer.py  schemas.py  sentinel.py
boreas/alerts/: telegram.py
boreas/baseline/: model.py
boreas/collectors/: base.py  energy_charts.py  entsoe.py  markets.py  netztransparenz.py  open_meteo.py
boreas/features/: analogs.py  engine.py  frame.py  power_curve.py
boreas/mastr/: sites.py
boreas/reporting/: reporter.py
boreas/trading/: book.py  limits.py  pnl.py
db/: schema.sql
deploy/: com.boreas.scheduler.plist
scripts/: deploy_site.sh
site/: package-lock.json  package.json  tsconfig.tsbuildinfo
site/app/: globals.css  layout.tsx  page.tsx
site/components/: ActivityLog.tsx  EquityChart.tsx  Playbook.tsx  StatStrip.tsx  ThesesTable.tsx
site/lib/: data.ts
tests/: test_features.py  test_limits.py  test_pnl.py  test_power_curve.py
