[project]
name = "boreas"
version = "0.1.0"
description = "BOREAS — autonomous German intraday power market paper-trading agent (ENTSO-E + SMARD + ICON-D2)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "entsoe-py>=0.6.7",
    "anthropic>=0.50",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1",
    "typer>=0.12",
    "yfinance>=0.2.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
boreas = "boreas.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["boreas*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
